--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                 <div class="contact__content">
                     <h3 class="contact__title contact__title-form">Write Me your Message</h3>
 
-                    <form action="https://formsubmit.co/mendozaibarra0306@gmail.com" class="contact__form">
+                    <form action="https://formsubmit.co/mendozaibarra0306@gmail.com" method="post" class="contact__form">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_autoresponse" value="Hola! soy Eduardo, Gracias por tu comentario, estare actualizando constantemente el sitio web.">
                         <input type="hidden" name="_template" value="table">
